# Option-Pricing-Prediction

./: .gitignore  LICENSE  README.md  black-scholes.py  pyproject.toml
notebooks/: black-scholes.ipynb  data_analysis.ipynb
