[tool.poetry]
name = "option-pricing-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
flask = "^3.0.3"
fastapi = "^0.111.1"
jupyter = "^1.0.0"
alpha-vantage = "^3.0.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
